[package]
name = "yew-sanmoku"
version = "0.1.0"
edition = "2021"

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true

[dependencies]
gloo-console = "0.2.0"
wee_alloc = "0.4.5"
yew = "0.18.0"
